--- a/.github/workflows/publish-coverage-site.yml
+++ b/.github/workflows/publish-coverage-site.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 jobs:
-  publish_site:
+  publish-site-coverage:
     runs-on: ubuntu-22.04
     timeout-minutes: 15
     permissions:
