--- a/.github/workflows/test-with-coverage.yml
+++ b/.github/workflows/test-with-coverage.yml
@@ -9,7 +9,7 @@ on:
         default: Release
 
 jobs:
-  test:
+  test-with-coverage:
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     permissions:
