--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -3,7 +3,8 @@ name: CI Main pipeline
 on:
   workflow_dispatch:
   push:
-    branches: [main]
+    tags:
+      - 'v*'
   workflow_call:
     secrets:
       SONAR_TOKEN:
@@ -18,7 +19,13 @@ permissions:
   contents: read
 
 jobs:
+  enforce-format:
+    permissions:
+      contents: write
+    uses: ./.github/workflows/enforce-format.yml
+
   determine-version:
+    needs: [enforce-format]
     uses: ./.github/workflows/determine-git-version.yml
 
   build-dotnet:
