--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -139,6 +139,29 @@
       "Cron": "*/10 * * * * *"
     }
   },
+  "Kafka": {
+    "AvroSerializer": {
+      "SubjectNameStrategy": "TopicRecord",
+      "AutoRegisterSchemas": true
+    }
+  },
+  "Topics": {
+    "ForecastRequested": "weather.forecast.requests"
+  },
+  "KafkaForecastEventsProducer": {
+    "CompressionType": "Zstd",
+    "Acks": "All",
+    "RequestTimeoutMs": 30000,
+    "MessageSendMaxRetries": 10,
+    "MessageTimeoutMs": 300000,
+    "RetryBackoffMs": 100,
+    "MaxMessageBytes": 1048576,
+    "BatchSize": 16384,
+    "LingerMs": 5,
+    "EnableIdempotence": true,
+    "MaxInFlight": 5,
+    "ClientId": "dotnetatlas-producer"
+  },
   "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
   "AllowedHosts": "*"
 }
