--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,9 +3,11 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     </PropertyGroup>
     <ItemGroup>
+        <PackageVersion Include="Apache.Avro" Version="1.12.0"/>
         <PackageVersion Include="Ardalis.SmartEnum.SystemTextJson" Version="8.1.0"/>
         <PackageVersion Include="Ardalis.Specification.EntityFrameworkCore" Version="9.3.1"/>
         <PackageVersion Include="AspNetCore.HealthChecks.Hangfire" Version="9.0.0"/>
+        <PackageVersion Include="AspNetCore.HealthChecks.Kafka" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.HealthChecks.OpenIdConnectServer" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.HealthChecks.Redis" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0"/>
@@ -27,6 +29,11 @@
         <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0"/>
         <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.21"/>
         <PackageVersion Include="Hangfire.SqlServer" Version="1.8.21"/>
+        <PackageVersion Include="KafkaFlow.LogHandler.Microsoft" Version="4.0.1"/>
+        <PackageVersion Include="KafkaFlow.Microsoft.DependencyInjection" Version="4.0.1"/>
+        <PackageVersion Include="KafkaFlow.OpenTelemetry" Version="4.0.1"/>
+        <PackageVersion Include="KafkaFlow.Serializer.ApacheAvro" Version="1.5.8"/>
+        <PackageVersion Include="KafkaFlow.Serializer.SchemaRegistry.ConfluentAvro" Version="4.0.1"/>
         <PackageVersion Include="MemoryPack.Core" Version="1.21.4"/>
         <PackageVersion Include="MessagePack.Annotations" Version="2.5.187"/>
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-rc.1.25451.107"/>
