--- a/src/DotNetAtlas.Api/appsettings.Local.json
+++ b/src/DotNetAtlas.Api/appsettings.Local.json
@@ -16,5 +16,13 @@
   "ConnectionStrings": {
     "Weather": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=breK3k3$;Encrypt=True;TrustServerCertificate=True",
     "Redis": "localhost:12346,defaultDatabase=0,allowAdmin=true,connectTimeout=2000,syncTimeout=2000,abortConnect=false"
+  },
+  "Kafka": {
+    "Brokers": [
+      "localhost:9094"
+    ],
+    "SchemaRegistry": {
+      "Url": "http://localhost:8081"
+    }
   }
 }
