test(kafka): add integration tests for Kafka event producer
Add comprehensive integration and functional tests for Kafka event producer.

Key additions:
- KafkaTestContainer using Testcontainers for integration tests
- KafkaTestConsumer helper for consuming and asserting Kafka messages
- ForecastRequestedEvent_FromHandler_Tests verifies events are properly published
- Update test fixtures to support Kafka infrastructure
- Adjust existing tests to work with Kafka integration

All tests verify that ForecastRequestedEvent is correctly published with proper serialization and topic routing.

--- a/.editorconfig
+++ b/.editorconfig
@@ -510,7 +510,7 @@ dotnet_diagnostic.CA1056.severity = suggestion
 dotnet_diagnostic.CA1062.severity = none
 
 # CA1054: Pass urls as Uri
-dotnet_diagnostic.CA1054.severity = silent
+dotnet_diagnostic.CA1054.severity = suggestion
 
 # CA1063: Implement IDisposable Correctly
 dotnet_diagnostic.CA1063.severity = suggestion
