--- a/test/Directory.Packages.props
+++ b/test/Directory.Packages.props
@@ -15,6 +15,9 @@
         <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Testcontainers.MsSql" Version="4.7.0"/>
         <PackageVersion Include="Testcontainers.Redis" Version="4.7.0"/>
+        <PackageVersion Include="Testcontainers.Kafka" Version="4.7.0"/>
+        <PackageVersion Include="Confluent.Kafka" Version="2.8.0"/>
+        <PackageVersion Include="Confluent.SchemaRegistry.Serdes.Avro" Version="2.8.0"/>
         <PackageVersion Include="Evolve" Version="3.2.0"/>
         <PackageVersion Include="Respawn" Version="6.2.1"/>
         <PackageVersion Include="Serilog.Sinks.XUnit.Injectable" Version="4.0.138"/>
