feat(config): add configurable Hangfire options, add ValidateDataAnnotations
Introduce HangfireOptions class to make Hangfire polling intervals and queue configuration externally configurable. Add ValidateDataAnnotations() to all options configurations across API, Application, and Infrastructure layers for runtime validation. Update job scheduling to support custom queues for better workload management.

- Create HangfireOptions with configurable JobExpirationCheckInterval, QueuePollInterval, SchedulePollingInterval, CancellationCheckInterval, and Queues
- Add Queue property to FakeWeatherAlertJobOptions for queue-specific job scheduling
- Enable data annotation validation on all IOptions configurations
- Change FakeWeatherAlertJob retry behavior from Delete to Fail on attempts exceeded
- Increase WeatherHedgingOptions PrimaryMaxDurationMs range from 1,000 to 10,000

BREAKING CHANGE: FakeWeatherAlertJobOptions now requires Queue property and HangfireOptions section must be configured in appsettings.json

--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -134,9 +134,20 @@
     "CircuitBreakerFailureRatio": 0.2,
     "CircuitBreakerBreakSeconds": 5
   },
+  "Hangfire": {
+    "JobExpirationCheckIntervalMs": 600000,
+    "QueuePollIntervalMs": 3000,
+    "SchedulePollingIntervalMs": 10000,
+    "CancellationCheckIntervalMs": 5000,
+    "Queues": [
+      "weatheralert",
+      "default"
+    ]
+  },
   "Jobs": {
     "FakeWeatherAlert": {
-      "Cron": "*/10 * * * * *"
+      "Cron": "*/10 * * * * *",
+      "Queue": "weatheralert"
     }
   },
   "Kafka": {
