--- a/.github/workflows/main-release-tag.yml
+++ b/.github/workflows/main-release-tag.yml
@@ -24,6 +24,8 @@ jobs:
         env:
           TAG: v${{ needs.determine-version.outputs.semVer }}
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           if git rev-parse "$TAG" >/dev/null 2>&1; then
             echo "Tag $TAG already exists, skipping."
             exit 0
