--- a/.github/workflows/sonar-cloud-analysis.yml
+++ b/.github/workflows/sonar-cloud-analysis.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   sonar-cloud-analysis:
     runs-on: ubuntu-22.04
-    timeout-minutes: 30
+    timeout-minutes: 10
+    if: github.ref == 'refs/heads/main'
     permissions:
       contents: read
     steps:
