feat(efcore): Use DbContextPooling for perf, add efcoreoptions, detailed errors, sensitive data logging

--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -111,6 +111,13 @@
       "EagerRefreshThreshold": 0.9
     }
   },
+  "EfCore": {
+    "DbContextPoolSize": 256,
+    "UseQuerySplitting": true,
+    "RetryMaxCount": 6,
+    "RetryMaxDelaySeconds": 30,
+    "EnableDetailedErrors": true
+  },
   "DefaultCache": {
     "DistributedCacheCircuitBreakerSeconds": 2,
     "IncludeTagsInLogs": true,
