feat(tests): improve testing infrastructure with shared test components for docker containers and tracing
- Introduced a new shared test project, DotNetAtlas.Test.Shared, to encapsulate common testing utilities and configurations for integration and functional tests.
- Updated various test projects to reference the new shared project, improving code organization and reducing duplication.
- Added support for SQL Server, Redis, and Kafka test containers, enabling streamlined setup and teardown for tests.
- Refactored existing tests to utilize the new shared infrastructure, ensuring consistency across test implementations.

--- a/.editorconfig
+++ b/.editorconfig
@@ -504,7 +504,7 @@ dotnet_diagnostic.CA1040.severity = none
 dotnet_diagnostic.CA1051.severity = suggestion
 
 # CA1056: URI-like properties should not be strings
-dotnet_diagnostic.CA1056.severity = suggestion
+dotnet_diagnostic.CA1056.severity = silent
 
 # CA1062: Validate arguments of public methods
 dotnet_diagnostic.CA1062.severity = none
@@ -611,7 +611,7 @@ dotnet_diagnostic.CS8618.severity = suggestion
 dotnet_diagnostic.IDE0005.severity = suggestion
 
 # IDE0032
-dotnet_diagnostic.IDE0032.severity = silent
+dotnet_diagnostic.IDE0032.severity = suggestion
 
 # IDE0090
 dotnet_diagnostic.IDE0090.severity = none
