--- a/test/DotNetAtlas.IntegrationTests/DotNetAtlas.IntegrationTests.csproj
+++ b/test/DotNetAtlas.IntegrationTests/DotNetAtlas.IntegrationTests.csproj
@@ -3,14 +3,7 @@
     <ItemGroup>
         <PackageReference Include="FastEndpoints.Testing"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing"/>
-        <PackageReference Include="Testcontainers.Redis"/>
-        <PackageReference Include="Evolve"/>
-        <PackageReference Include="Testcontainers.MsSql"/>
-        <PackageReference Include="Testcontainers.Kafka"/>
-        <PackageReference Include="Confluent.Kafka"/>
-        <PackageReference Include="Confluent.SchemaRegistry.Serdes.Avro"/>
         <PackageReference Include="Serilog.Sinks.XUnit.Injectable"/>
-        <PackageReference Include="Respawn"/>
         <PackageReference Include="FluentResults.Extensions.FluentAssertions"/>
         <PackageReference Include="NSubstitute"/>
         <PackageReference Include="NSubstitute.Analyzers.CSharp">
@@ -21,7 +14,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj"/>
-        <ProjectReference Include="..\DotNetAtlas.ArchitectureTests\DotNetAtlas.ArchitectureTests.csproj"/>
+        <ProjectReference Include="..\DotNetAtlas.Test.Shared\DotNetAtlas.Test.Shared.csproj"/>
         <ProjectReference Include="..\..\shared\DotNetAtlas.SchemaRegistry\DotNetAtlas.SchemaRegistry.csproj"/>
     </ItemGroup>
 
