--- a/test/DotNetAtlas.FunctionalTests/DotNetAtlas.FunctionalTests.csproj
+++ b/test/DotNetAtlas.FunctionalTests/DotNetAtlas.FunctionalTests.csproj
@@ -4,18 +4,14 @@
         <PackageReference Include="FastEndpoints.Testing"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing"/>
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client"/>
-        <PackageReference Include="Testcontainers.Redis"/>
-        <PackageReference Include="Evolve"/>
-        <PackageReference Include="Testcontainers.MsSql"/>
         <PackageReference Include="Serilog.Sinks.XUnit.Injectable"/>
-        <PackageReference Include="Respawn"/>
         <PackageReference Include="TypedSignalR.Client"/>
         <PackageReference Include="NSubstitute"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj"/>
-        <ProjectReference Include="..\DotNetAtlas.ArchitectureTests\DotNetAtlas.ArchitectureTests.csproj"/>
+        <ProjectReference Include="..\DotNetAtlas.Test.Shared\DotNetAtlas.Test.Shared.csproj"/>
         <ProjectReference Include="..\DotNetAtlas.IntegrationTests\DotNetAtlas.IntegrationTests.csproj" />
     </ItemGroup>
 
