--- a/test/DotNetAtlas.FunctionalTests/DotNetAtlas.FunctionalTests.csproj
+++ b/test/DotNetAtlas.FunctionalTests/DotNetAtlas.FunctionalTests.csproj
@@ -10,7 +10,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj"/>
-        <ProjectReference Include="..\DotNetAtlas.Test.Shared\DotNetAtlas.Test.Shared.csproj"/>
+        <ProjectReference Include="..\DotNetAtlas.Test.Framework\DotNetAtlas.Test.Framework.csproj" />
         <ProjectReference Include="..\DotNetAtlas.IntegrationTests\DotNetAtlas.IntegrationTests.csproj" />
     </ItemGroup>
 
