--- a/test/DotNetAtlas.IntegrationTests/DotNetAtlas.IntegrationTests.csproj
+++ b/test/DotNetAtlas.IntegrationTests/DotNetAtlas.IntegrationTests.csproj
@@ -13,7 +13,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj"/>
-        <ProjectReference Include="..\DotNetAtlas.Test.Shared\DotNetAtlas.Test.Shared.csproj"/>
+        <ProjectReference Include="..\DotNetAtlas.Test.Framework\DotNetAtlas.Test.Framework.csproj" />
     </ItemGroup>
 
 </Project>
