ci(test): add Docker Image caching for TestContainers
Add Docker image caching using ScribeMD/docker-cache to speed up test
execution. Cache key is based on TestContainer file hashes to ensure
proper invalidation when container definitions change. Architecture test ensures files are found

- Add docker-cache step to test-with-coverage workflow
- Add architecture test enforcing Container naming for cache key generation
- Refactor test assertions to use FailingTypes, if this assertion fails, you immeditealy know what's wrong in the error message

--- a/.github/workflows/test-with-coverage.yml
+++ b/.github/workflows/test-with-coverage.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   test-with-coverage:
     runs-on: ubuntu-22.04
-    timeout-minutes: 30
+    timeout-minutes: 20
     permissions:
       contents: read
     steps:
@@ -29,6 +29,11 @@ jobs:
         env:
           CONFIGURATION: ${{ inputs.configuration }}
         run: dotnet build -c "$CONFIGURATION" --no-restore
+      - name: Cache Docker images
+        uses: ScribeMD/docker-cache@0.5.0
+        continue-on-error: true
+        with:
+          key: docker-${{ runner.os }}-${{ hashFiles('test/DotNetAtlas.Test.Framework/**/*Container.cs') }}
       - name: Test with coverage
         env:
           CONFIGURATION: ${{ inputs.configuration }}
