--- a/.github/workflows/sonar-cloud-analysis.yml
+++ b/.github/workflows/sonar-cloud-analysis.yml
@@ -10,7 +10,7 @@ jobs:
   sonar-cloud-analysis:
     runs-on: ubuntu-22.04
     timeout-minutes: 10
-    if: github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: read
     steps:
