--- a/.github/workflows/test-with-coverage.yml
+++ b/.github/workflows/test-with-coverage.yml
@@ -14,6 +14,7 @@ jobs:
     timeout-minutes: 20
     permissions:
       contents: read
+      actions: write
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
@@ -30,7 +31,7 @@ jobs:
           CONFIGURATION: ${{ inputs.configuration }}
         run: dotnet build -c "$CONFIGURATION" --no-restore
       - name: Cache Docker images
-        uses: ScribeMD/docker-cache@0.5.0
+        uses: AndreKurait/docker-cache@0fe76702a40db986d9663c24954fc14c6a6031b7 #0.6.0
         continue-on-error: true
         with:
           key: docker-${{ runner.os }}-${{ hashFiles('test/DotNetAtlas.Test.Framework/**/*Container.cs') }}
