feat: Add Health Checks separate DI configuration and appsettings
- Introduced HealthChecksOptions and HangfireHealthCheckOptions for configurable timeouts and thresholds across all health check dependencies
- Extracted health checks setup into dedicated HealthChecksDependencyInjection module with support for database, messaging (Kafka), Redis, external APIs, and Hangfire monitoring
- Updated Kafka Avro serializer settings to use Record subject naming strategy with schema normalization disable

--- a/src/DotNetAtlas.Api/appsettings.Local.json
+++ b/src/DotNetAtlas.Api/appsettings.Local.json
@@ -15,6 +15,12 @@
     }
   },
   // Infrastructure layer
+  // Communication & Messaging
+  "Kafka": {
+    "AvroSerializer": {
+      "AutoRegisterSchemas": true
+    }
+  },
   // Authentication & Authorization
   "Authentication": {
     "JwtBearer": {
