--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -17,6 +17,8 @@
         <PackageVersion Include="AspNetCore.HealthChecks.Uris" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.SignalR.OpenTelemetry" Version="1.7.0"/>
         <PackageVersion Include="Bogus" Version="35.6.3"/>
+        <PackageVersion Include="Confluent.Kafka" Version="2.6.1"/>
+        <PackageVersion Include="Confluent.SchemaRegistry.Serdes.Avro" Version="2.6.1"/>
         <PackageVersion Include="Elastic.Serilog.Enrichers.Web" Version="9.0.0"/>
         <PackageVersion Include="EntityFrameworkCore.Exceptions.SqlServer" Version="8.1.3"/>
         <PackageVersion Include="FastEndpoints.Attributes" Version="7.0.1"/>
@@ -43,6 +45,8 @@
         <PackageVersion Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Build.Tasks.Core" Version="17.14.28"/>
+        <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.0-rc.1.25451.107"/>
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-rc.1.25451.107"/>
@@ -50,7 +54,14 @@
         <PackageVersion Include="Microsoft.Extensions.ApiDescription.Server" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.9.0"/>
+        <PackageVersion Include="Microsoft.Extensions.Options" Version="10.0.0-rc.1.25451.107"/>
+        <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.0-rc.1.25451.107"/>
+        <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0-rc.1.25451.107"/>
+        <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0-rc.1.25451.107"/>
+        <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0-rc.1.25451.107"/>
+        <PackageVersion Include="Microsoft.Extensions.Options.DataAnnotations" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.1.0"/>
+        <PackageVersion Include="OpenTelemetry.Api" Version="1.12.0"/>
         <PackageVersion Include="OpenTelemetry.Exporter.Console" Version="1.12.0"/>
         <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0"/>
         <PackageVersion Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.12.0-beta.1"/>
